--- a/sample/src/main/res/layout/activity_ptr_list_in_vp.xml
+++ b/sample/src/main/res/layout/activity_ptr_list_in_vp.xml
@@ -6,7 +6,7 @@
 
     <!-- The PullToRefreshListView replaces a standard ListView widget. -->
 
-    <androidx.core.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
